--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   nginxProxy:
     image: jwilder/nginx-proxy:alpine
     restart: always
-    container_name: proxy
+    container_name: nginxProxy
     labels:
       com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
     ports:
