Changes to the uwsgi.ini file to get the server working

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,3 +1,9 @@
 [uwsgi]
+master = true
+processes = 5
+socket = askmeagain.sock
+chmod-socket = 660
+vacuum = true
+die-on-term = true
 module = ask_meagain
 callable = app
