Changes to the uwsgi.ini file to get the server working

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,5 +5,5 @@ socket = askmeagain.sock
 chmod-socket = 660
 vacuum = true
 die-on-term = true
-module = ask_meagain
+module = wsgi:app
 callable = app
